nueva actualización en los estilos

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -14,44 +14,46 @@
 </head>
 <body>
     <!--Panel Historia de los dólmenes-->
-    <div class="flex_container">
-        <section class="container_info container_info_dolmenes">
-            <div class="container_button">
+    <div class="flex-container">
+        <section class="container-info container-info-dolmenes">
+            <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fw-bolder">Idioma</button>
             </div>
-            <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
-                <h1 class="title fs-1">titulo principal</h1>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
+            <article class="overflow-auto container-cards-scroll">
+                <h1 class="title fs-1">Dólmenes de Euskal Herria</h1>
+                <p class="fs-5">La ruta de los dólmenes, que debe su nombre al eminente paleontólogo y etnógrafo José Miguel de
+                    Barandiaran, conecta en el valle gipuzcoano de Deba, en los términos municipales de Bergara, Soraluze y
+                    Elgoibar, con la historia arqueológica de Euskal Herria a través de la visita a 16 monumentos megalíticos
+                    de la estación de Elosua-Plazentzia.
+                    No hace falta mucho tiempo para recorrer esta ruta de monumentos funerarios, de desnivel escaso y
+                    que, además, ofrece unas vistas inigualables entre los valles del Urola y Deba. Las panorámicas, en
+                    cualquiera de las direcciones, son espectaculares, ya que a un lado nos encontramos con el abrazo del
+                    Cantábrico y al otro, cumbres como Aralar, Aizkorri, Anboto o Gorbeia. En días despejados se pueden
+                    divisar hasta las Peñas de Aia y las estribaciones pirenaicas.
+                    La ruta de los dólmenes, denominada PR-Gi 94, comprende un recorrido de 20 kilómetros a través de la
+                    divisoria de Karakate-Agirreburu y une las localidades de Elgoibar, Soraluze y Bergara. Es un sendero de
+                    gran valor natural y cultural, en el que se pueden contemplar vestigios de nuestros antepasados,
+                    dólmenes (enterramientos colectivos con losas verticales) y túmulos (sin cámara dolménica, solo con
+                    piedras amontonadas) que conforman la estación megalítica de Elosua-Plazentzia.
+                    El paseante se encontrará con una importante concentración de dólmenes y túmulos, monumentos
+                    relacionados con los rituales funerarios de la cultura ancestral de los pastores. Hasta un total de 16
+                    monumentos (10 túmulos y seis dólmenes), algunos de los cuales fueron expoliados tras ser
+                    descubiertos por Barandiaran. Son los dólmenes de Agerreburu, Aitzpuruko Zabala, Atxolin, Iruiya,
+                    Irukurutzeta y Keixetako Egiya Sur; y los túmulos de Aizkoin, Atxolin Txiki, Keixeta, Keixetako Egiya
+                    Norte, Kutzebakaar, Maurketa, Naasiko Goena, Pagobedeinkatu, Trekutz y Gizaburua.
+                    La ruta se encuentra conectada con los núcleos urbanos de Elgoibar, Bergara y Soraluze, y está
+                    señalizada y balizada. Los tres ayuntamientos citados, junto a la Sociedad de Ciencias Aranzadi, la
+                    Diputación del herrialde y el Gobierno vasco han participado en la adecuación e interpretación de esta
+                    ruta porque “el sendero y su entorno contienen recursos tangibles e intangibles con un importante
+                    potencial turístico, en particular en el ámbito rural”, destacan desde las instituciones. En los tres pueblos
+                    y Debabarrena Turismo ofrecen información y folletos sobre la ruta. </p>
             </article>
         </section>
-        <nav class="nav_bar nav_bar_dolmenes">
+        <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar"><a href="mapa-dolmenes.html">Mapa de los dolmenes <br> <span class="sub_text">Mandubi, Trikuhazti I, Trikuhazti II eta Larrarte</span></a></li>
-                <li class="button_nav_bar"><a href="img360.html">Galería de imágenes 360º <br> <span class="sub_text">Una de cada uno de ellos menos Mandubi</span></a></li>
+                <li class="button-nav-bar"><a href="mapa-dolmenes.html"><img src="../../media/mapWhite.svg" alt="icono mapa"><p>Mapa</p><p class="sub-text">Mandubi, Trikuhazti I, Trikuhazti II eta Larrarte</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Galería 360º</p><p class="sub-text">Una de cada uno de ellos menos Mandubi</p></a></li>
             </ol>
         </nav>
     </div>
