--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -27,158 +27,107 @@
   </head>
   <body>
     <!-- INICIO Galería de imagenes 360º -->
-    <div id="ocultar-galeria" class="flex_container">
-      <section class="container_cards">
-        <div class="container_button">
+    <div id="ocultar-galeria" class="flex-container">
+      <section class="container-cards">
+        <div class="container-button">
           <button class="lang fw-bolder" onclick="history.back()">
             Atrás
           </button>
           <button class="lang fw-bolder">Idioma</button>
         </div>
         <!-- contenedor de imagnes con información -->
-        <div class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    id="1"
-                    src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 1"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+        <div class="overflow-auto container-cards-scroll">
+            <div class="row-container">
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-1267579597-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    id="2"
-                    src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 2"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-685766224-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    id="3"
-                    src="../../media/02_Jose_Arana.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-1248257041-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/15_Jose_Arana.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-657832689-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/20_Jose_Arana.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-126383899-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-845885088-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-1287571325-2048x2048.jpg" alt="dolmen xxxxx">
+                </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/02_Jose_Arana.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+              <div class="col-container">
+                <div class="col-container-img">
+                  <div class="col-container-360"><p>360º</p></div>
+                  <img class="change" src="../../media/gettyimages-685766224-2048x2048.jpg" alt="dolmen xxxxx">
                 </div>
-              </div>
-              <div class="col mb-5">
-                <div class="card bg-transparent border-0">
-                  <img
-                    src="../../media/15_Jose_Arana.jpeg"
-                    class="card-img-top rounded-top change"
-                    alt="img 3"
-                  />
-                  <div class="card-body rounded-bottom">
-                    <p class="card-text fs-4">
-                      Nombre del sitio o breve descripción
-                    </p>
-                  </div>
+                <div class="col-container-text">
+                  <h3>Nombre del Dólmen</h3>
+                  <p fs-5>Descripción lorem ipsum lorem imsup lorem lorem</p>
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </section>
     </div>
     <!-- INICIO Panel de imágenes 360º -->
     <div id="activar-vista-360">
       <section
-        class="container_img_360"
+        class="container-img-360"
       >
-        <div class="container_button">
+        <div class="container-button">
           <button class="lang fw-bolder" onclick="returnGaleria()">
             Atrás
           </button>
