--- a/html/index.html
+++ b/html/index.html
@@ -14,34 +14,33 @@
 </head>
 <body>
     <!--Panel principal-->
-    <div class="flex_container">
-        <section class="container_info">
-            <div class="container_button">
+    <div class="flex-container">
+        <section class="container-info">
+            <div class="container-button">
                 <button class="lang fw-bolder">Idioma</button>
             </div>
             <article class="img-fondo">
-                <img src="../media/img-ejemplo.jpg" alt="">
-            </article>
-            <article class="text_container ps-4 pe-4">
-                <div>
-                    <h1 class="title fs-1">titulo principal</h1>
-                    <p class="fs-3">*En este espacio incluiremos un texto que hable de proyecto y sirva de introducción.
-                        De fondo pondremos una foto del dolmen o del prado en el que está enterrado.</p>
+                <img src="../media/gettyimages-927938320-2048x2048.jpg" alt="Dólmen Mandubi">
+                <div class="text-container">
+                    <div>
+                        <h1 class="title fs-1">Dólmen Mandubi</h1>
+                        <p class="fs-5">Se ubica próximo a los dólmenes de Trikuaizti, por lo que su excavación ha permitido obtener datos de interés complementarios a los que se poseen sobre esta misma zona megalítica, que adquiere relevancia por esta concentración de monumentos.</p>
+                    </div>
                 </div>
             </article>
         </section>
-        <section class="conteiner_logo">
-            <img src="../media/Itsaso herria - Marka.png" alt="logo1">
-            <img src="../media/Itsaso herria - Marka.png" alt="logo2">
-            <img src="../media/Itsaso herria - Marka.png" alt="logo3">
-            <img src="../media/Itsaso herria - Marka.png" alt="logo4">
-            <img src="../media/Itsaso herria - Marka.png" alt="logo5">
+        <section class="container-logo">
+            <div><img src="../media/Itsaso herria - Marka.png" alt="logo1"></div>
+            <div><img src="../media/Itsaso herria - Marka.png" alt="logo2"></div>
+            <div><img src="../media/Itsaso herria - Marka.png" alt="logo3"></div>
+            <div><img src="../media/Itsaso herria - Marka.png" alt="logo4"></div>
+            <div><img src="../media/Itsaso herria - Marka.png" alt="logo5"></div> 
         </section>
-        <nav class="nav_bar">
+        <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar"><a href="../html/historia/historia.html">Historia de los dólmenes</a></li>
-                <li class="button_nav_bar"><a href="../html/mandubi/mandubi.html">Dolmen de Mandubi</a></li>
-                <li class="button_nav_bar"><a href="../html/investigacion/investigacion.html">Investigación</a></li>
+                <li class="button-nav-bar"><a href="../html/historia/historia.html"><img src="../media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
+                <li class="button-nav-bar"><a href="../html/mandubi/mandubi.html"><img src="../media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubi</p></a></li>
+                <li class="button-nav-bar"><a href="../html/investigacion/investigacion.html"><img src="../media/investigationWhite.svg" alt="icono Investigación"> <p>Investigación</p></a></li>
             </ol>
         </nav>
     </div>
