--- a/html/investigacion/img360.html
+++ b/html/investigacion/img360.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <!-- INICIO Panel de imágenes 360º -->
-    <div class="flex_container">
-        <section class="container_img_360">
-            <div class="container_button">
+    <div class="flex-container">
+        <section class="container-img-360">
+            <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
             </div>
             <a-scene>
