--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -14,44 +14,44 @@
 </head>
 <body>
     <!-- Panel Investigación -->
-    <div class="flex_container"> <!-- cambiar -->
-        <section class="container_info container_info_dolmenes">
-            <div class="container_button">
+    <div class="flex-container"> <!-- cambiar -->
+        <section class="container-info container-info-dolmenes">
+            <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fw-bolder">Idioma</button>
             </div>
-            <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
+            <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Investigación de la excavación de Mandubi</h1>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
+                    magni, id enim! Consectetur delectus quis aspernatur?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
                     magni, id enim! Consectetur delectus quis aspernatur?</p>
             </article>
         </section>
-        <nav class="nav_bar">
+        <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar"><a href="galeria.html">Galería de imágenes</a></li>
-                <li class="button_nav_bar"><a href="img360.html">Imágen 360º</a></li>
+                <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Galería</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Imágen</p></a></li>
             </ol>
         </nav>
     </div>
