--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,46 +14,31 @@
 </head>
 <body>
     <!-- Panel Dolmen de Mandubi --> 
-    <div class="flex_container"> <!-- cambiar -->
-        <section class="container_info container_info_dolmenes">
-            <div class="container_button">
+    <div class="flex-container"> <!-- cambiar -->
+        <section class="container-info container-info-dolmenes">
+            <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fw-bolder">Idioma</button>
             </div>
-            <article class="overflow-auto contariner_cards_scroll pt-2 ps-4 pe-4">
-                <h1 class="title fs-1">titulo principal</h1>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <img class="img_float" src="../../media/dolmen-3.jpg" alt="dolmen de Mandubi">
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
-                    nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
-                    magni, id enim! Consectetur delectus quis aspernatur?</p>
+            <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
+                <h1 class="title fs-1">Dólmenes de Mandubi</h1>
+                <p class="fs-5">La ruta de los dólmenes, que debe su nombre al eminente paleontólogo y etnógrafo José Miguel de
+                    Barandiaran, conecta en el valle gipuzcoano de Deba, en los términos municipales de Bergara, Soraluze y
+                    Elgoibar, con la historia arqueológica de Euskal Herria a través de la visita a 16 monumentos megalíticos
+                    de la estación de Elosua-Plazentzia.
+                    </p>
+                <img class="img-float" src="../../media/dolmen-3.jpg" alt="dolmen de Mandubi">
+                <p class="fs-5">No hace falta mucho tiempo para recorrer esta ruta de monumentos 
+                    funerarios, de desnivel escaso y que, además, ofrece unas vistas inigualables entre los valles del Urola y Deba. Las panorámicas, en
+                    cualquiera de las direcciones, son espectaculares, ya que a un lado nos encontramos con el abrazo del
+                    Cantábrico y al otro, </p>
             </article>
         </section>
-        <nav class="nav_bar">
+        <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button_nav_bar"><a href="mapa.html">Como llegar + mapa</a></li>
-                <li class="button_nav_bar"><a href="galeria.html">Galería de imágenes</a></li>
-                <li class="button_nav_bar"><a href="galeriaVR.html">Galería de realidad aumentada</a></li>
+                <li class="button-nav-bar"><a href="mapa.html"><img src="../../media/roadWhite.svg" alt="icono como llegar"><p>Como llegar</p></a></li>
+                <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Galería</p></a></li>
+                <li class="button-nav-bar"><a href="galeriaVR.html"><img src="../../media/vrWhite.svg" alt="icono galeria realidad aumentada"><p>Galería VR</p></a></li>
             </ol>
         </nav>
     </div>
