--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -24,32 +24,36 @@
   </head>
   <body onload="cargarMapa()">
     <!-- Panel mapa de los dólmenes -->
-    <div class="flex_container">
-      <section class="container_info height">
-        <div class="container_button">
+    <div class="flex-container">
+      <section class="container-info data-dolmen">
+        <div class="container-button">
           <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
           <button class="lang fw-bolder">Idioma</button>
         </div>
-        <article class="maps_container ps-4 pe-4">
+        <article class="maps-container">
           <div id="map"></div>
         </article>
-      </section>
-      <ol id="info" class="h-100 p-0 m-0">
-        <li>
-          <h1 class="title text-center">Información de interés</h1>
-          <ul class="container_text_maps">
-            <li>Formas de llegar: <br /><span class="color">Bus</span></li>
-            <li>Rutas: <br /><span class="color">xxxxx</span></li>
-            <li>Pueblos cercanos: <br /><span class="color">xxxxx</span></li>
+        <article class="maps-info-container">
+          <button class="button-info">
+            <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
+            <div><p>Como llegar</p></div>
+          </button>
+          <ol id="info">
             <li>
-              Paradas de transporte público cercanas: <br /><span class="color"
-                >xxxxx</span
-              >
+              <h1 class="title fs-1">Información de interés</h1>
+              <ul class="container-text-maps">
+                <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutas:</u><br>
+                  lorem impsum lorem impsum lorem impsum</p></li>
+                <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Pueblos cercanos:</u><br>
+                  lorem impsum lorem impsum lorem impsum</p></li>
+                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
+                  lorem impsum lorem impsum lorem impsum</p></li>
+                <li><img src="" alt=""><p><u>Etc.</u></p></li>
+              </ul>
             </li>
-            <li>Etc.</li>
-          </ul>
-        </li>
-      </ol>
+          </ol>
+        </article>
+      </section>
     </div>
     <!-- Api Mapbox -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
