--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,42 +19,38 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <!-- javaScript main-->
+    <script src="../../js/main.js"></script>
+    <!-- libreria  para model viewer -->
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
+    ></script>
   </head>
   <body onload="cargarCarousel()">
     <!-- Panel Galería de imágenes -->
-    <div class="flex_container">
+    <div class="flex-container">
       <section
-        class="container_info container_info_galery"
+        class="container-info data-dolmen"
       >
         <!-- botones -->
-        <div id="buttonVr" class="d-flex justify-content-between">
-          <div class="container-button-vr">
-            <button class="lang fw-bolder" onclick="history.back()">
-              Atrás
-            </button>
-            <button class="lang fw-bolder">Idioma</button>
-          </div>
-          <div id="hidden" class="container-button-vr">
-            <button
-              class="lang fw-bolder pause"
-              type="button"
-              value="pause"
-              onclick="pauseAndPlay()"
-            >
+        <div class="container-button">
+          <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+          <button class="lang fw-bolder">Idioma</button>
+          <button id="hidden" class="lang fw-bolder pause" value="pause" onclick="pauseAndPlay()">
               Play
             </button>
-            <button class="lang fw-bolder" onclick="reset()">Reset</button>
-          </div>
-        </div>
+      </div>
+        
         <!-- contenedor de imagen central -->
-        <article class="contenedor ps-4 pe-4">
+        <article class="galery-container">
           <!--contenedor de modelo 3D-->
           <div class="img-ampliada">
             <model-viewer
               id="imgGalery"
               class="Model3d"
               bounds="tight"
-              src="../../media/Barca_01.glb"
+              src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua.glb"
               animation-name="Running"
               ar-modes="webxr scene-viewer quick-look"
               camera-controls
@@ -79,90 +75,76 @@
           <!-- Selector de imágenes -->
           <div class="carousel">
             <div class="container-carousel-img">
-              <div class="img-carousel">
                 <model-viewer
-                  class="imgItems"
+                class="img-carousel" data-pos="-2"
                   bounds="tight"
-                  src="../../media/Barca_01.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Irekia.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
-              </div>
-              <div class="img-carousel">
                 <model-viewer
-                  class="imgItems"
+                class="img-carousel" data-pos="-1"
                   bounds="tight"
-                  src="../../media/Capitan America (1).glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Animatua.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
-              </div>
-              <div class="img-carousel">
                 <model-viewer
-                  class="imgItems"
+                class="img-carousel" data-pos="0"
                   bounds="tight"
-                  src="../../media/GLB_Arbol_01.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
-              </div>
-              <div class="img-carousel">
                 <model-viewer
-                  class="imgItems"
+                class="img-carousel" data-pos="1"
                   bounds="tight"
-                  src="../../media/GLB_Coche_03.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
-              </div>
-              <div class="img-carousel">
                 <model-viewer
-                  class="imgItems"
+                class="img-carousel" data-pos="2"
                   bounds="tight"
-                  src="../../media/GLB_Jaguar.glb"
+                  src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua_Animatua.glb"
                   ar
                   ar-modes="webxr scene-viewer quick-look"
                   environment-image="neutral"
                   poster=""
                   shadow-intensity="1"
                 ></model-viewer>
-              </div>
             </div>
           </div>
         </article>
+        <article class="galery-info-container">
+          <ol id="info">
+              <li>
+                <h1 class="title fs-1">Información de interés</h1>
+                <ul class="container-text-maps">
+                  <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Nombre:</u><br>
+                    Dolmen 3</p></li>
+                  <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Ubicación:</u><br>
+                    lorem impsum lorem impsum lorem impsum</p></li>
+                  <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
+                    lorem impsum lorem impsum lorem impsum</p></li>
+                  <li><img src="" alt=""><p><u>Etc.</u></p></li>
+                </ul>
+              </li>
+          </ol>
+      </article>
       </section>
-      <ol id="info" class="h-100 p-0 m-0">
-        <li>
-            <h1 class="title text-center">Información de interés</h1>
-            <ul class="container_text_maps">
-                <li>Nombre: <br><span class="color">Barca</span></li>
-                <li>Tamaño: <br><span class="color">3 metros</span></li>
-                <li>Fecha: <br><span class="color">20/03/1720</span></li>
-                <li>Material: <br><span class="color">Piedra</span></li>
-                <li>Utilidad: <br><span class="color">desconocida</span></li>
-                <li>...</li>
-            </ul>
-        </li>
-    </ol>
     </div>
-    <script src="../../js/main.js"></script>
-    <!-- libreria  para model viewer -->
-    <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
-    </script>
   </body>
 </html>
