--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,39 +13,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <!-- Mapbox style -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
-</head>
+    <!-- Api Mapbox -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
+    <!-- javaScript main-->
+    <script src="../../js/main.js"></script>
+    <!-- libreria A-Frame -->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  </head>
 <body onload="cargarMapa()">
     <!-- Panel mapa mandubi -->
-    <div class="flex_container">
-        <section class="container_info height">
-            <div class="container_button">
+    <div class="flex-container">
+        <section class="container-info data-dolmen">
+            <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fw-bolder">Idioma</button>
             </div>
-            <article class="maps_container ps-4 pe-4">
+            <article class="maps-container">
                 <div id="map"></div>
             </article>
+            <article class="maps-info-container">
+                <button class="button-info">
+                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
+                    <div><p>Como llegar</p></div>
+                </button>
+                <button class="button-info" onclick="innerSee360()">
+                    <div><img src="../../media/360White.svg" alt="icon como llegar"></div>
+                    <div><p>Ver Dólmen</p></div>
+                </button>
+                <ol id="info">
+                  <li>
+                    <h1 class="title fs-1">Información de interés</h1>
+                    <ul class="container-text-maps">
+                      <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Rutas:</u><br>
+                        lorem impsum lorem impsum lorem impsum</p></li>
+                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Pueblos cercanos:</u><br>
+                        lorem impsum lorem impsum lorem impsum</p></li>
+                      <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Paradas de transporte público:</u><br> 
+                        lorem impsum lorem impsum lorem impsum</p></li>
+                      <li><img src="" alt=""><p><u>Etc.</u></p></li>
+                    </ul>
+                  </li>
+                </ol>
+              </article>
         </section>
-        <nav id="nav_bar_small" class="nav_bar">
-            <ol id="buttom_360" class="p-0 m-0">
-                <li class="button_nav_bar"><a href="img360.html">Recorrido 360º</a></li>
-            </ol>
-        </nav>
-        <ol id="info" class="p-0 m-0">
-            <li>
-                <h1 class="title text-center">Información de interés</h1>
-                <ul class="container_text_maps">
-                    <li>Formas de llegar: <br><span class="color">Bus</span></li>
-                    <li>Rutas: <br><span class="color">xxxxx</span></li>
-                    <li>Pueblos cercanos: <br><span class="color">xxxxxx</span></li>
-                    <li>Paradas de transporte público cercanas: <br><span class="color">xxxxxx</span></li>
-                    <li>Etc.</li>
-                </ul>
-            </li>
-        </ol>
     </div>
-    <!-- Api Mapbox -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
