Modificamos imagen principal del Trikuharri

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
                 <button class="lang fw-bolder">Idioma</button>
             </div>
             <article class="img-fondo">
-                <img src="../media/gettyimages-927938320-2048x2048.jpg" alt="Dólmen Mandubi">
+                <img src="../media/MandubiZelaia.jpeg" alt="Dólmen Mandubi">
                 <div class="text-container">
                     <div>
                         <h1 class="title fs-1">Dólmen Mandubi</h1>
